[package]
name = "GJ_StampTour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
serde = "1.0.193"
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["serde", "v4", "v5"] }
log = "0.4.20"
log4rs = { version = "1.2.0", features = ["yaml_format"] }
chrono = "0.4.31"
svg = "0.14.0"
bcrypt = "0.15.0"
image = "0.24"
lazy_static = "1.4.0"
rand = "0.8.5"
actix-multipart = "0.6.1"
futures-util = "0.3"     # 비동기 스트림 처리 # 이미지 형식 검증 (보안용)